--- a/main.css
+++ b/main.css
@@ -43,7 +43,7 @@ body {
     color: #ff9946; 
 }
 
-.section {
+.main {
     position: relative;
     top: 70px; 
     left: 0;
@@ -51,7 +51,7 @@ body {
     height: calc(100vh - 70px);
     }
     
-.section img {
+.main img {
     width: 100%; 
     height: 100%;
     object-fit: cover; 
@@ -98,7 +98,6 @@ body {
 
 .search-box:focus {
     outline: none; 
-    
     background-color: #ffffff;
 }
 
