--- a/book.css
+++ b/book.css
@@ -1,42 +1,46 @@
-body, h1, p {
-  margin: 0;
-  padding: 0;
-  background-color: #8d8d8d;
+nav {
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 50px;
+    line-height: 50px;
+    background-color: #4d6b50;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
-h1 {
-  font-size: 15px;
-  background: #8d8d8d;
+.nav-item {
+    padding: 20px 10px;
+    font-weight: 400;
+    color: #fffbed;
+    margin-right: 10px;
 }
 
-.header {
-  background-color: #8d8d8d;
-  text-align: center;
-  height: 40px; 
-  line-height: 40px; 
-  border-bottom: 2px solid #203b23;
-  position: fixed;
-  top: 0; 
-  width: 100%; 
-  z-index: 1000; 
-  
-}
-
-main {
-  padding-top: 60px;
-  padding: 20px;
-}
-
-.footer {
-  background-color: #f8f9fa;
-  text-align: center;
-  height: 30px; 
-  line-height: 30px;
-  border-top: 2px solid #203b23;
-  position: fixed; 
-  bottom: 0; 
-  width: 100%; 
-  z-index: 1000;
+.nav-logo {
+    margin-top: 15px;
+    margin-bottom: 15px;
+    margin-left: 30px;
+    margin-right: auto; 
+    display: block;
 }
 
 
+
+@media screen and (max-width: 768px) {
+    nav {
+        height: 40px;
+    }
+
+    .nav-item {
+        margin: 5px 0;
+        padding: 10px;
+        font-size: 14px;
+    }
+
+    .nav-logo {
+        margin-left: 10px;
+        width: 120px;
+    }
+}
