--- a/book.css
+++ b/book.css
@@ -1,46 +1,3 @@
-nav {
-    position: fixed;
-    top: 0px;
-    left: 0px;
-    width: 100%;
-    height: 50px;
-    line-height: 50px;
-    background-color: #4d6b50;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.nav-item {
-    padding: 20px 10px;
-    font-weight: 400;
-    color: #fffbed;
-    margin-right: 10px;
-}
-
-.nav-logo {
-    margin-top: 15px;
-    margin-bottom: 15px;
-    margin-left: 30px;
-    margin-right: auto; 
-    display: block;
-}
-
-
-
-@media screen and (max-width: 768px) {
-    nav {
-        height: 40px;
-    }
-
-    .nav-item {
-        margin: 5px 0;
-        padding: 10px;
-        font-size: 14px;
-    }
-
-    .nav-logo {
-        margin-left: 10px;
-        width: 120px;
-    }
+. navbar {
+  border-color: ;
 }
